Added Basic Sql interface

--- a/RandomYoutubeVideo/appsettings.json
+++ b/RandomYoutubeVideo/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DataBaseContext": "Server=(localdb)\\mssqllocaldb;Database=DataBaseContext-1;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "RandomYoutubeVideoContext": "Server=(localdb)\\mssqllocaldb;Database=RandomYoutubeVideoContext-f634ad50-7576-4b35-abe9-bfca09ad62d6;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
